Public/styles.css
main#home {
    width: 30%;
    margin-right: auto;
    margin-left: auto;
    text-align: center;
    font-size:50px;
}

main#posts-container {
    width: 60%;
    margin: 0 auto;
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
    gap: 1rem;
    padding: 1rem;
}

main#create {
    margin: 0;
    padding: 0;
    font-family: Arial, sans-serif;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 60vh;
}

a {
    text-decoration: none;
    color: inherit;
    display: inline-block;
    transition: transform 0.3s ease;
}

a:hover {
    transform: translateY(-10px);
}

header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 1rem 2rem;
}

header nav {
    display: flex;
    gap: 1rem;
}

header a {
    text-decoration: none;
    color: #333;
    font-weight: bold;
    transition: color 0.3s ease;
}

header a:hover {
    color: #555;
    transform: translateY(0px);
}

header a:active {
    color: #222;
}

.post {
    background-color: #fffb8f;
    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
    padding: 1.5rem;
    border-radius: 5px;
    font-family: 'Arial', sans-serif;
    transition: transform 0.2s ease;
    height: 300px;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
}

.post:hover {
    transform: translateY(-5px);
}

.post h2 {
    font-weight: bold;
    margin: 0;
    margin-bottom: 0.5rem;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    text-align: left;
}

.post h3 {
    margin: 0;
    font-size: 0.9rem;
    color: #333;
    text-align: left;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.post-form {
    background-color: #fffb8f;
    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
    padding: 2rem;
    border-radius: 5px;
    width: 300px;
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

.post-form input, .post-form textarea {
    width: 100%;
    padding: 0.5rem;
    border: none;
    outline: none;
    border-radius: 3px;
    font-size: 1rem;
    background-color: transparent;
    resize: none;
}

.post-form button {
    background-color: #333;
    color: #fff;
    border: none;
    padding: 0.75rem;
    border-radius: 3px;
    cursor: pointer;
    transition: background-color 0.2s ease;
}

.post-form button:hover {
    background-color: #555;
}

#content {
    opacity: 0;
    transition: opacity 0.5s ease;
}

.fade-in {
    opacity: 1;
}

.fade-out {
    opacity: 0; 
}

